# talentsync

./: .env.example  .gitignore  BUILD_SPEC.md  PLAN.md  PLAN_AGENTIC_UPGRADE.md  PLAN_NEXT_FEATURES.md  PRODUCT.md  alembic.ini  app.py  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json  workflow_diagram.html
alembic/: env.py
alembic/versions/: 001_initial.py  002_agent_runs_steps.py
api/: auth.py  deps.py  docx_builder.py  main.py
api/routers/: auth.py  bulk.py  bulk_autofix.py  chat.py  dashboard.py  intake.py  jobs.py  pay_hints.py  presets.py  refine.py  templates.py
data/: results.json
db/: models.py  session.py  types.py
presentation_docs/: 01_project_overview.md  02_technical_architecture.md  03_compliance_rules.md  04_project_context.md  NOTEBOOKLM_PROMPT.md
sample_batches/batch_1_clean/: data_analyst.txt  product_manager.txt  senior_software_engineer.txt
talentsync/: compliance.py  contracts.py  core.py  enrich.py  eval.py  generate_synthetic_jds.py  llm.py  pipeline.py  prompts.py  reconstruct.py  refine_graph.py  retry_failed.py  synthetic_seeds.py  verify.py
tests/: conftest.py  test_audit_log.py  test_audit_report.py  test_auth.py  test_bulk_audit.py  test_chat.py  test_compliance.py  test_dashboard.py  test_demo_batch.py  test_intake.py  test_jobs.py  test_langgraph_spike.py  test_pay_hints.py  test_presets.py  test_refine.py  test_templates.py  test_versioning.py
web/: index.html  package-lock.json  package.json  screenshot_app.mjs  tailwind.config.js  tailwind.config.ts  vercel.json  vite.config.ts
(+43 files in other folders)
